<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_share_account"
            android:icon="@drawable/ic_shared_black"
            android:title="@string/nav_share_account" />
    </group>

    <group>
    <item android:title="@string/nav_options">
        <menu>
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_help" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_setting" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/logout_icon"
                android:title="@string/nav_logout" />
        </menu>
    </item>
    </group>

</menu>
